# quic-tcp-compare

./: Cargo.toml  README.md
src/: main.rs
src/utils/: download.rs  upload.rs
templates/: downloadpage.hbs  hi.hbs
